--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/ip": "^1.1.0",
     "@types/socket.io-client": "^1.4.32",
     "axios": "^0.19.0",
+    "ip": "^1.1.5",
     "roslib": "^1.0.1",
     "rxjs": "^6.5.4",
     "socket.io-client": "^2.3.0"
