--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Local node server for each GB",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "start": "tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "prod": "npm run start",
+    "dev": "export ADDRESS=localhost &&  npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
